# WebText2SQL

./: .env  .gitignore  CITATION.cff  DbController.py  Dockerfile  README.md  app.py  docker-compose.yml  example_query.sql  pyproject.toml  requirements.txt  restart_server.sh  ruff.toml  run_server.bat  run_server.sh  stop_server.sh  useful_pg_queries.sql
.chainlit/: config.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
SQL/: -1.drop_tables.sql  0.create_db.sql  00.create_app_user.sql  01.create_app_user.sql  01.create_chainlit_data_layer_tables.sql  03.create_northwind_schema.sql  04.insert_northwind_data.sql  04.migrate.add_user_context_column.sql  1.create_user.sql  2.create_chainlit_schema.sql
SQL/root/postgres/: 00.create_northwind_schema.sql  00.create_test_schemas.sql  01.create_test_users.sql
SQL/root/postgres/northwind/: 00.create_northwind_tables.sql  01.insert_northwind_data.sql  02.create_mock_users.sql
SQL/root/postgres/pagila/: 00.create_pagila_tables.sql  01.insert_pagila_data.sql
SQL/root/postgres/sailors/: 00.create_sailors_tables.sql  01.insert_sailors_data.sql
SQL/root/webtext2sql/: 00.create_app_user.sql  01.create_chainlit_data_layer_tables.sql  02.grants_to_users.sql
app/SQL/: 02.create_webtext2sql_tables.sql  03.grants_to_users.sql
app/src/: .env  __init__.py  app.py  auth.py  caching_configs.py  chainlit_app.py  chainlit_controller.py  connection_factory.py  custom_logging.py  db_controller.py  main.py  str_manipulation.py
app/src/.chainlit/: config.toml
app/src/controllers/: user_connections.py
app/src/controllers/models/: __init__.py  app_users.py  user_connections.py
app/src/db_controllers/: base_db_controller.py  mysql_controller.py  pg_controller.py
app/src/public/: custom_scripts.js
app/src/static/: style.min.css
app/src/templates/: login.html
app/src/user_controllers/: app_users.py  user_connections.py
app/src/user_controllers/models/: user_connections.py
app/test/SQL/mysql/root/: 01.create_test_users.sql  04.grants_to_users.sql
app/test/SQL/mysql/root/02.world/: 00.create_world_tables.sql  01.insert_world_data.sql
app/test/SQL/postgres/root/: 05.grants_to_users.sql
app/test/SQL/postgres/root/02.northwind/: 00.create_northwind_tables.sql
app/test/SQL/postgres/root/04.sailors/: 01.insert_sailors_data.sql
app/test/SQL/root/: 00.create_test_schemas.sql
app/test/SQL/root/02.northwind/: 01.insert_northwind_data.sql
app/test/SQL/root/03.pagila/: 00.create_pagila_tables.sql
app/test/SQL/root/04.sailors/: 00.create_sailors_tables.sql
app/test/docker/: docker-compose.yml
docker/: docker-compose.yml
public/: logo.xcf  theme.json
src/: .env  DbController.py  __init__.py  ai_controller.py  app.py  auth.py  caching_configs.py  chainlit_app.py  chainlit_controller.py  connection_controller.py  connection_factory.py  custom_logging.py  db_controller.py  main.py  str_manipulation.py
src/db_controllers/: __init__.py  base_db_controller.py  mysql_controller.py  pg_controller.py
src/public/: favicon_image.xcf  theme.json
src/templates/: login.html  register.html
src/user_controllers/: __init__.py  app_users.py  user_connections.py
src/user_controllers/models/: __init__.py  app_users.py
test/: test_db_connection.py
tests/SQL/mysql/root/: 00.create_test_schemas.sql
tests/SQL/postgres/root/: 01.create_test_users.sql
tests/SQL/postgres/root/03.pagila/: 01.insert_pagila_data.sql
tools/: init_azure_storage.py  localstack-script.sh
